--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   min-height: 100vh;
+  background-color: hsl(217, 100%, 97%);
 }
 
 /*
@@ -48,7 +49,7 @@ video,
 canvas,
 svg {
   display: block;
-  max-width: 100%;
+  /* max-width: 100%; */
 }
 
 /*
@@ -61,6 +62,9 @@ select {
   font: inherit;
 }
 
+/* input, label {
+  display: block;
+} */
 /*
     7. Avoid text overflows
   */
@@ -83,14 +87,30 @@ h6 {
   isolation: isolate;
 }
 
+main {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: inherit;
+}
+main div.container {
+  border-radius: 1em;
+  width: 950px;
+  height: 625px;
+  background-color: hsl(0, 0%, 100%);
+  padding: 1.7em 1.5em 1.5em 1.5em;
+}
+
 .wrapper {
-  padding: 1.5em;
   display: flex;
 }
 
 div.sidebar {
+  font-size: 0.9em;
   color: hsl(0, 0%, 100%);
-  width: 30%;
+  width: 41%;
+  flex-shrink: 0;
+  /* flex-basis: 574.828px; */
   position: relative;
   /* background-image: url(../assets/images/bg-sidebar-desktop.svg);
   background-size: cover;
@@ -98,16 +118,16 @@ div.sidebar {
 }
 div.sidebar picture {
   display: block;
-  width: 100%;
+  max-width: 100%;
 }
 div.sidebar picture img {
-  width: 100%;
+  max-width: 100%;
 }
 div.sidebar div.sidebar-content {
   position: absolute;
   top: 0;
   left: 0;
-  margin: 3.5em 0 0 2.5em;
+  margin: 2.5em 0 0 2.5em;
 }
 div.sidebar div.sidebar-content div.sidebar-wrapper {
   width: 170px;
@@ -115,7 +135,7 @@ div.sidebar div.sidebar-content div.sidebar-wrapper {
   justify-content: flex-start;
   align-items: center;
   gap: 1em;
-  margin: 0 0 50px 0;
+  margin: 0 0 30px 0;
 }
 div.sidebar div.sidebar-content div.sidebar-wrapper p.number {
   display: flex;
@@ -148,8 +168,69 @@ div.sidebar div.sidebar-content div.sidebar-wrapper div span.step-title {
   font-weight: 700;
 }
 
+/* 
+.steps {
+  margin-left: 6em;
+} */
 .active {
   display: block;
+}
+
+h1.step-heading {
+  margin-top: 0.7em;
+  font-size: 2.5em;
+}
+
+p.heading-paragraph {
+  color: hsl(231, 11%, 63%);
+  font-weight: 500;
+}
+
+button.Next {
+  border: none;
+  background-color: hsl(213, 96%, 18%);
+  color: hsl(229, 24%, 87%);
+  font-family: inherit;
+  text-align: center;
+  width: 105px;
+  padding: 0.5em 0;
+  margin: 6.5em 0 0 22em;
+  border-radius: 5px;
+}
+
+div.step1 form {
+  margin-top: 2.5em;
+}
+div.step1 form div {
+  display: flex;
+  flex-direction: column;
+  gap: 0.2em;
+  margin-bottom: 1em;
+}
+div.step1 form div label {
+  font-weight: 500;
+}
+div.step1 form div input {
+  color: inherit;
+  font-weight: 700;
+  border-radius: 7px;
+  border: 1px hsl(229, 24%, 87%) solid;
+  padding: 0.5em 0.5em;
+}
+div.step1 form div input:focus {
+  outline: 2px solid hsl(213, 96%, 18%);
+}
+div.step1 form div input::-moz-placeholder {
+  color: hsl(231, 11%, 63%);
+  font-weight: 500;
+}
+div.step1 form div input::placeholder {
+  color: hsl(231, 11%, 63%);
+  font-weight: 500;
+}
+
+div.main-content {
+  color: hsl(213, 96%, 18%);
 }
 
 .inactive {
