--- a/styles.scss
+++ b/styles.scss
@@ -231,32 +231,35 @@ button.back-button {
 }
 
 div.step1 {
-  form {
-    margin-top: 2.5em;
-    div {
-      display: flex;
-      flex-direction: column;
-      gap: 0.2em;
-      margin-bottom: 1em;
-      label {
-        font-weight: 500;
-      }
-      input {
-        color: inherit;
-        font-weight: 700;
-        border-radius: 7px;
-        border: 1px $LightGray solid;
-        padding: 0.5em 0.5em;
-      }
-      input:focus {
-        outline: 2px solid $MarineBlue;
-      }
-      input::placeholder {
-        color: $CoolGray;
-        font-weight: 500;
+  div.steps-content {
+    form {
+      margin-top: 2.5em;
+      div {
+        display: flex;
+        flex-direction: column;
+        gap: 0.2em;
+        margin-bottom: 1em;
+        label {
+          font-weight: 500;
+        }
+        input {
+          color: inherit;
+          font-weight: 700;
+          border-radius: 7px;
+          border: 1px $LightGray solid;
+          padding: 0.5em 0.5em;
+        }
+        input:focus {
+          outline: 2px solid $MarineBlue;
+        }
+        input::placeholder {
+          color: $CoolGray;
+          font-weight: 500;
+        }
       }
     }
   }
+  
   button.next-step {
     margin: 6.5em 0 0 22em;
   }
@@ -267,51 +270,55 @@ div.main-content {
 }
 
 div.step-2 {
-  div.user-plans {
-    margin-top: 2.5em;
-    display: grid;
-
-    grid-template-columns: repeat(3, 140px);
-    gap: 1em;
-    article.plans {
+  div.steps-content {
+    div.user-plans {
+      margin-top: 2.5em;
+      display: grid;
+  
+      grid-template-columns: repeat(3, 140px);
+      gap: 1em;
+      article.plans {
+        border-radius: 5px;
+        /* width: 150px; */
+        padding: 1.5em 1em 1.1em;
+        border: 1px solid $LightGray;
+        line-height: 1.2;
+        h2.plan-heading {
+          margin-top: 2.5em;
+        }
+        p {
+          color: $CoolGray;
+          font-size: 0.9em;
+          font-weight: 500;
+        }
+      }
+    }
+    div.plan-frequency {
       border-radius: 5px;
-      /* width: 150px; */
-      padding: 1.5em 1em 1.1em;
-      border: 1px solid $LightGray;
-      line-height: 1.2;
-      h2.plan-heading {
-        margin-top: 2.5em;
-      }
-      p {
-        color: $CoolGray;
-        font-size: 0.9em;
-        font-weight: 500;
+      margin-top: 2em;
+      background-color: $Magnolia;
+      max-width: 452px;
+      display: flex;
+      gap: 1em;
+      justify-content: center;
+      align-items: center;
+      padding: 0.7em 0;
+      color: $LightGray;
+      font-weight: 700;
+      text-transform: capitalize;
+      /* img {
+        width: 100px;
+      } */
+      span.active {
+        color: $MarineBlue;
       }
     }
   }
-  div.plan-frequency {
-    border-radius: 5px;
-    margin-top: 2em;
-    background-color: $Magnolia;
-    max-width: 452px;
-    display: flex;
-    gap: 1em;
-    justify-content: center;
-    align-items: center;
-    padding: 0.7em 0;
-    color: $LightGray;
-    font-weight: 700;
-    text-transform: capitalize;
-    /* img {
-      width: 100px;
-    } */
-    span.active {
-      color: $MarineBlue;
-    }
-  }
+  
 }
 
 div.step-three {
+ div.steps-content {
   div.add-on-container {
     margin-top: 2.5em;
     article {
@@ -396,6 +403,7 @@ div.step-three {
       font-weight: 700;
     }
   }
+ }
   div.nav-buttons {
     margin-top: 5.5em;
   }
@@ -412,9 +420,89 @@ div.step-four {
 }
 
 div.success-container {
+  display: flex;
+  height: 100%;
+  text-align: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  p.thanks-message {
+    max-width: 452px;
+    color: $CoolGray;
+    margin-top: 1em;
+    font-weight: 500;
+  }
+}
+@media screen and (width < 768px) {
+  main {
+    background-color: inherit;
+    display: block;
+    div.container {
+      position: relative;
+      border-radius: none;
+      background-color: $Magnolia;
+      padding: 0 ;
+      width: 100%;
+      min-height: 100vh;
+    }
+  }
+
+ 
+
+  div.steps-content {
+    border-radius: 10px;
+    margin: 0 4%;
+    width: 92%;
+    background-color: $White;
+    position: absolute;
+    top: 98px;
+    height: fit-content;
+  }
+
+
+ /*  div.steps {
+    height: 500;
+    width: 80%;
+  } */
+  
+  div.wrapper {
+    display: block;
+    
+  }
+  div.sidebar {
+    width: 100%;
+    height: 172px;
+    picture {
+      img {
+        width: 100%;
+      }
+     
+    }
+    div.sidebar-content {
+      margin: 2em 0 0;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+      div.sidebar-wrapper {
+        width: 50px;
+        div {
+          display: none;
+        }
+      }
+    }
+  }
+
+  
+
+  div.success-container {
+    padding: 4em 0;
+    p.thanks-message {
+      width: 305px;
+    }
+  }
   
 }
-
 .inactive {
   display: none;
 }
