--- a/styles/styles.css
+++ b/styles/styles.css
@@ -411,9 +411,26 @@ div.success-container p.thanks-message {
     background-color: hsl(217, 100%, 97%);
     padding: 0;
     width: 100%;
-    min-height: 100vh;
+    /*   min-height: 100vh; */
+  }
+  h1.step-heading {
+    margin-top: 1.1em;
+    font-size: 1.5em;
+  }
+  p.heading-paragraph {
+    margin-top: 1px;
+  }
+  div.nav-buttons {
+    margin: 0;
+    padding: 1em;
+    position: absolute;
+    top: 670px;
+    display: flex;
+    background-color: hsl(0, 0%, 100%);
+    width: 100%;
   }
   div.steps-content {
+    padding: 0 1.1em 1.1em;
     border-radius: 10px;
     margin: 0 4%;
     width: 92%;
@@ -449,6 +466,49 @@ div.success-container p.thanks-message {
   }
   div.sidebar div.sidebar-content div.sidebar-wrapper div {
     display: none;
+  }
+  div.step-2 div.steps-content div.user-plans {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 80px);
+  }
+  div.step-2 div.steps-content div.user-plans article.plans {
+    padding: 1em;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+  }
+  div.step-2 div.steps-content div.user-plans article.plans img {
+    height: 40px;
+    width: 40px;
+  }
+  div.step-2 div.steps-content div.user-plans article.plans h2.plan-heading {
+    margin-top: 0;
+  }
+  div.step-2 div.steps-content div.user-plans article.plans p {
+    color: hsl(231, 11%, 63%);
+    font-size: 0.9em;
+    font-weight: 500;
+  }
+  div.step-2 div.plan-frequency {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  div.step-three div.steps-content div.add-on-container article {
+    width: 100%;
+    padding: 0.6em 1em;
+    gap: 8%;
+  }
+  div.step-three div.steps-content div.add-on-container div {
+    line-height: 1.2;
+    width: 60%;
+  }
+  div.step-three div.steps-content div.add-on-container div p {
+    font-size: 0.8em;
+    color: hsl(231, 11%, 63%);
+  }
+  div.step-three div.steps-content div.add-on-container p.add-on-pricing {
+    justify-self: flex-end;
+    font-size: 0.8em;
   }
   div.success-container {
     padding: 4em 0;
