--- a/styles/styles.css
+++ b/styles/styles.css
@@ -60,6 +60,7 @@ button,
 textarea,
 select {
   font: inherit;
+  cursor: pointer;
 }
 
 /* input, label {
@@ -387,7 +388,7 @@ div.step-four p.total {
 
 div.success-container {
   display: flex;
-  height: 100%;
+  height: 568px;
   text-align: center;
   flex-direction: column;
   justify-content: center;
