--- a/styles/styles.css
+++ b/styles/styles.css
@@ -484,6 +484,14 @@ div.success-container p.thanks-message {
     margin-top: 1px;
   }
   div.nav-buttons {
+    margin: 0;
+    padding: 1em 1em;
+    position: absolute;
+    top: 670px;
+    width: 100%;
+    background-color: hsl(0, 0%, 100%);
+    height: 5em;
+    align-items: center;
     /*  margin: 0;
     padding: 0 1em 1em;
     position: absolute;
@@ -543,6 +551,7 @@ div.success-container p.thanks-message {
     display: flex;
     align-items: center;
     bottom: 0;
+    top: 600px;
   }
   div.step1 button.next-step {
     position: absolute;
